# magenta-rt-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/magenta_rt_api/: __init__.py  cli.py  main.py
ui/: index.html  package.json  vite.config.ts
ui/src/: App.tsx  index.css
